# cs50p-project

./: .gitignore  .mypy.ini  .pytest.ini  .ruff.toml  CHANGELOG.md  README.md  TODO.md  constants.py  countries.csv  instructions.md  mode_cli.py  mode_interactive.py  project.py  pyproject.toml  requirements.txt  test_project.py  ui.py  visa.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  linter.yml  test.yml  tests.yml
scripts/: devcontainer_postCreateCommand.sh
visa_tool/: __init__.py  constants.py  mode_interactive.py  test_project.py
